sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Help__mdt/SFDC_Help__mdt.object-meta.xml
<CustomObject>
    <description>Configured help text labels and links displayed within different areas of the application (e.g. sidebar help component)</description>
    <label>SFDC Help</label>
    <pluralLabel>SFDC Help</pluralLabel>
</CustomObject>