sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Help__mdt/fields/Description_Label__c.field-meta.xml
<CustomField>
    <fullName>Description_Label__c</fullName>
    <description>The name of the Custom Label for the description of this link.</description>
    <inlineHelpText>The name of the Custom Label for the description of this link.</inlineHelpText>
    <label>Description Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>