sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Help__mdt/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <description>The name of the SLDS icon to show with this link (if applicable).</description>
    <inlineHelpText>The name of the SLDS icon to show with this link (if applicable).</inlineHelpText>
    <label>Icon Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>