sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Help__mdt/fields/Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Link_URL__c</fullName>
    <description>The destination URL for this help item.</description>
    <inlineHelpText>The destination URL for this help item.</inlineHelpText>
    <label>Link URL</label>
    <type>Url</type>
</CustomField>