sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Help__mdt/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Where this help item can be found in the application.</description>
    <inlineHelpText>Where this help item can be found in the application.</inlineHelpText>
    <label>Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Help Sidebar - Main Link</fullName>
                <default>true</default>
                <label>Help Sidebar - Main Link</label>
            </value>
            <value>
                <fullName>Help Sidebar - Side Link</fullName>
            </value>
            <value>
                <fullName>DeploymentChecklist</fullName>
                <label>Deployment Checklist</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>