sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Help__mdt/fields/Title_Label__c.field-meta.xml
<CustomField>
    <fullName>Title_Label__c</fullName>
    <description>The name of the Custom Label for the title of this link.</description>
    <inlineHelpText>The name of the Custom Label for the title of this link.</inlineHelpText>
    <label>Title Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>