sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Help__mdt/listViews/All_Items.listView-meta.xml
<ListView>
    <fullName>All_Items</fullName>
    <columns>MasterLabel</columns>
    <columns>Title_Label__c</columns>
    <columns>Description_Label__c</columns>
    <columns>Link_URL__c</columns>
    <columns>Icon_Name__c</columns>
    <columns>Location__c</columns>
    <columns>Index__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Items</label>
    <language>en_US</language>
</ListView>